crates/fortitude/tests/snapshots/check__output_format_rule_id_show_both_rdjson.snap
---
source: crates/fortitude/tests/check.rs
info:
  program: fortitude
  args:
    - check
    - "--output-format"
    - rdjson
    - "--preview"
    - "--select"
    - implicit-typing
    - test.f90
    - "--config"
    - "check.output-rule-id-format='both'"
---
success: false
exit_code: 1
----- stdout -----
{
  "diagnostics": [
    {
      "code": {
        "url": "https://fortitude.readthedocs.io//en/stable/rules/implicit-typing",
        "value": "implicit-typing"
      },
      "severity": "ERROR",
      "location": {
        "path": "[TMP]/test.f90",
        "range": {
          "end": {
            "line": 2,
            "column": 1
          },
          "start": {
            "line": 1,
            "column": 1
          }
        }
      },
      "message": "program uses implicit typing",
      "suggestions": [
        {
          "range": {
            "end": {
              "line": 2,
              "column": 1
            },
            "start": {
              "line": 2,
              "column": 1
            }
          },
          "text": "implicit none\n"
        }
      ]
    }
  ],
  "severity": "WARNING",
  "source": {
    "name": "fortitude",
    "url": "https://fortitude.readthedocs.io/"
  }
}
----- stderr -----
