crates/fortitude/tests/snapshots/check__output_format_rule_id_show_both_sarif.snap
---
source: crates/fortitude/tests/check.rs
info:
  program: fortitude
  args:
    - check
    - "--output-format"
    - sarif
    - "--preview"
    - "--select"
    - implicit-typing
    - test.f90
    - "--config"
    - "check.output-rule-id-format='both'"
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----
{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "fixes": [
            {
              "artifactChanges": [
                {
                  "artifactLocation": {
                    "uri": "[TMP]/test.f90"
                  },
                  "replacements": [
                    {
                      "deletedRegion": {
                        "endColumn": 1,
                        "endLine": 2,
                        "startColumn": 1,
                        "startLine": 2
                      },
                      "insertedContent": {
                        "text": "implicit none\n"
                      }
                    }
                  ]
                }
              ],
              "description": {
                "text": "Insert `implicit none`"
              }
            }
          ],
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "[TMP]/test.f90"
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 2,
                  "startColumn": 1,
                  "startLine": 1
                }
              }
            }
          ],
          "message": {
            "text": "program uses implicit typing"
          },
          "ruleId": "implicit-typing"
        }
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/PlasmaFAIR/fortitude",
          "name": "fortitude",
          "rules": [
            {
              "fullDescription": {
                "text": "## What does it do?\nChecks for missing `implicit none`.\n\n## Why is this bad?\nVery early Fortran determined the type of variables implicitly\nfrom the first character of their name which saved lines in the\ndays of punchcards, and for backwards compatibility this is still\nthe default behaviour. However, the major downside is that typos\ncan silently introduce undefined variables and lead to hard to\ntrack down bugs. For example:\n\n```f90\ndo i = 1, 10\n    print*, in\nend do\n```\n\nwill print garbage.\n\n'implicit none' should be used in all modules and programs, as\nimplicit typing reduces the readability of code and increases the\nchances of typing errors. Because it applies to all children of an\nentity (all procedures in a module, for example), it _isn't_\nrequired in every procedure, just the parent module or program if\nthere is one.\n"
              },
              "help": {
                "text": "{entity} uses implicit typing"
              },
              "id": "implicit-typing",
              "properties": {
                "id": "implicit-typing",
                "kind": "Correctness",
                "name": "implicit-typing",
                "problem.severity": "error"
              },
              "shortDescription": {
                "text": "{entity} uses implicit typing"
              }
            }
          ],
          "version": "[VERSION]"
        }
      }
    }
  ],
  "version": "2.1.0"
}
----- stderr -----
